Remove file that should not be tracked

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-TouchTypingTutor.xcodeproj/xcuserdata
+TouchTypingTutor.xcodeproj/xcuserdata/*
+TouchTypingTutor.xcodeproj/project.xcworkspace/xcuserdata/*
+
