--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-TouchTypingTutor.xcodeproj/xcuserdata/*
-TouchTypingTutor.xcodeproj/project.xcworkspace/xcuserdata/*
-
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
